2019-09-10 0.8.7 indev
We refactorin', eh? Hell yeah.

(Almost) Completely rewritten qmpChannelsWindow, one of the oldest
component, now with a dedicated data model.
Removed dumb design (CMidiPlayer::getChstates).
Now QMidiPlayer requires C++14 to build.
More refactoring like this coming up soon.

2019-07-01 0.8.7 indev
Actually send initialization sequence to external devices.

Replace hardcoded initial CC values with values from device property API.

2019-06-30 0.8.7 indev
Use splitter in preset selection dialog.

Device initialization settings are no longer lost if QMidiPlayer starts with
the device disconnected.

2019-06-17 0.8.7 indev
Device initialization file implementation (part 1).

Added UI for external device configuration.
Instrument mapping portion of the device intialization file is now working.
Fixed a few spots where return value of getChannelPreset() is ignored.
Fixed layout of the preset selection dialog.

2019-06-16 0.8.7 indev
Inital implementation of the device properties API.

Added new interfaces to qmpMidiOutDevice.
Implemented the new interfaces for qmpMidiOutFluid.
Initial infra for device initialization file parsing.
Move to the new interfaces for getting list of presets.
Use DevIL instead of CxImage.

External output devices are broken now but that is for
another commit.

2019-05-26 0.8.7 indev
New flag field in SEvent.
Further type usage corrections.
Removed all references to ICallback in official plugins.

2019-05-25 0.8.7 indev
Massive code refactor en cours!
Less complain from compilers:
 - use nullptr instead of NULL
 - use types for event fields
 - explicit type casting added
Stop saving parameters of meta events in p1/p2 fields of SEvent.
SEventCallBackData removed. Use SEvent instead.
callback_t now uses std::function, deprecating ICallback.

2019-04-22 0.8.7 indev
New development cycle!
Partially reintroduce High DPI handling.
Pressing enter when a preset is focused now opens the preset selection dialog.